# claude-code-goodies-in-python

./: .envrc  .gitignore  .python-version  CLAUDE.md  DEVELOPMENT.md  README.md  claude-helpers.sh  claude-json-shrinking-recommendations.md  claude_progress.py  clean-claude-json.py  dev.sh  main.py  pyproject.toml  setup-hybrid-uv.sh
.github/workflows/: publish-to-pypi.yml
cc_goodies/: __init__.py  main.py
cc_goodies/commands/: __init__.py  hooks.py  mv.py  pexpect_test.py  progress.py  rename.py  snapshot.py  status.py
cc_goodies/core/: __init__.py  progress_tracker.py
claudedocs/: recursive-enhancement-analysis.md
tests/: test_recursive_operations.py  test_rename.py  test_rename_comprehensive.py  test_rename_scenarios.py
