[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-goodies"
version = "0.1.0"
description = "A collection of useful tools for Claude AI, including a progress tracker for claude -p command"
authors = [
    {name = "sharedsky", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["claude", "cli", "progress", "ai", "assistant", "tools", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
claude-progress = "claude_progress_pkg:main"

[project.urls]
Homepage = "https://github.com/time4wiley/claude-code-goodies-in-python"
Repository = "https://github.com/time4wiley/claude-code-goodies-in-python"
Issues = "https://github.com/time4wiley/claude-code-goodies-in-python/issues"
